--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,8 @@ requires:
     Class::Accessor:               0
     Class::Data::Inheritable:      0
     HTTP::Request:                 0
+    Net::Pcap:                     0.04
     NetPacket::TCP:                0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.25
+generated_by: ExtUtils::MakeMaker version 6.17
